deployment/nomad/terraform/main.tf
provider "aws" {
  region  = "us-west-1"
}

data "aws_availability_zones" "available" {}

data "aws_ssm_parameter" "amazon_linux_2023" {
  name = "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64"
}

### VPC, SUBNET, NOMAD & BASTION CONFIGURATION

resource "aws_vpc" "nomad_vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true
  tags = {
    Name = "nomad_vpc"
  }
}
resource "aws_subnet" "nomad_subnet" {
  vpc_id            = aws_vpc.nomad_vpc.id
  cidr_block        = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone = data.aws_availability_zones.available.names[0]  # Use the first available zone

  tags = {
    Name = "nomad_subnet"
  }
}
resource "aws_subnet" "bastion_subnet" {
  vpc_id                  = aws_vpc.nomad_vpc.id
  cidr_block              = "10.0.2.0/24"
  map_public_ip_on_launch = true
  availability_zone = data.aws_availability_zones.available.names[0]  # Use the first available zone
  tags = {
    Name = "bastion_subnet"
  }
}
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.nomad_vpc.id

  tags = {
    Name = "main-igw"
  }
}
resource "aws_security_group" "nomad_sg" {
  name        = "nomad_sg"
  description = "Allow Nomad cluster traffic"
  vpc_id      = aws_vpc.nomad_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    security_groups = [aws_security_group.bastion_sg.id]
  }


  # Allow Nomad HTTP API communication
  ingress {
    from_port   = 4646
    to_port     = 4646
    protocol    = "tcp"
    self        = true
    security_groups = [aws_security_group.bastion_sg.id]
  }

  # Allow Nomad RPC communication
  ingress {
    from_port   = 4647
    to_port     = 4647
    protocol    = "tcp"
    self        = true
  }

  # Allow Nomad Gossip protocol communication (TCP and UDP)
  ingress {
    from_port   = 4648
    to_port     = 4648
    protocol    = "tcp"
    self        = true
  }

  ingress {
    from_port   = 4648
    to_port     = 4648
    protocol    = "udp"
    self        = true
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
resource "aws_security_group" "bastion_sg" {
  name        = "bastion_sg"
  description = "Security group for SSH access to bastion"
  vpc_id      = aws_vpc.nomad_vpc.id


  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Consider restricting this to your IP for security
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["10.0.0.0/16"] # Allows access to the entire VPC
  }

  tags = {
    Name = "bastion_sg"
  }
}
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.nomad_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "public-rt"
  }
}
resource "aws_route_table_association" "nomad_public_rta" {
  subnet_id      = aws_subnet.nomad_subnet.id
  route_table_id = aws_route_table.public_rt.id
}
resource "aws_route_table_association" "bastion_public_rta" {
  subnet_id      = aws_subnet.bastion_subnet.id
  route_table_id = aws_route_table.public_rt.id
}
resource "aws_instance" "bastion_host" {
  ami           = data.aws_ssm_parameter.amazon_linux_2023.value
  instance_type = var.bastion_instance_type
  subnet_id     = aws_subnet.bastion_subnet.id
  key_name      = var.key_name
  security_groups = [aws_security_group.bastion_sg.id]

  tags = {
    Name = "bastion-host"
  }
}

resource "aws_instance" "nomad_instance" {
  count         = 3
  ami           = data.aws_ssm_parameter.amazon_linux_2023.value
  instance_type = var.nomad_instance_type
  subnet_id     = aws_subnet.nomad_subnet.id
  security_groups = [aws_security_group.nomad_sg.id]
  key_name      = var.key_name
  private_ip = "10.0.1.${count.index + 10}"

  user_data = templatefile("${path.module}/nomad_user_data.tpl", {
    count = count.index,
    private_ip = "10.0.1.${count.index + 10}",
    server_ip = "10.0.1.10"
    install_consul = var.install_consul
    install_danswer = var.install_danswer
  })

  tags = {
    Name = "NomadInstance-${count.index == 0 ? "Server" : ""}-${count.index}"
  }
}
